vocabulary in progress

--- a/assets/css/blocks/_any-stand-alone-block.scss
+++ b/assets/css/blocks/_any-stand-alone-block.scss
@@ -22,9 +22,10 @@ button {
     color: tomato;
     text-transform: uppercase;
     font-weight: 700;
-    margin-bottom: 20px;
     cursor: pointer;
     border-radius: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
     transition: all 0.3s, opacity 0s;
 
     &:hover {
@@ -46,6 +47,7 @@ button {
     margin: -5px;
 
     &::before {
+        $color: rgba(0,0,0, .3);
         $size: 100% / 16;
         content: '';
         position: absolute;
@@ -53,20 +55,19 @@ button {
         bottom: 5px;
         left: 0;
         width: 100%;
-        background-image: linear-gradient(to right, transparent 0px, transparent 5px,
-            black 6px,
+       /* background-image: linear-gradient(to right, transparent 0px, transparent 5px,
+            $color 6px,
             transparent 7px, transparent calc(25% + 2px),
-            black calc(25% + 3px),
+            $color calc(25% + 3px),
             transparent calc(25% + 3px), transparent calc(50% - 1px),
-            black 50%,
+            $color 50%,
             transparent 50%, transparent calc(75% - 3px),
-            black calc(75% - 2px),
+            $color calc(75% - 2px),
             transparent calc(75% - 2px), transparent calc(100% - 7px),
-            black calc(100% - 6px),
+            $color calc(100% - 6px),
             transparent calc(100% - 6px)),
-
-                          repeating-linear-gradient(to bottom, black 0px, transparent 1px, transparent 21px, black 22px, transparent 22px);
-        background-size: $size 22px, 100% 231px;
+            repeating-linear-gradient(to bottom, $color 0px, transparent 1px, transparent 21px, $color 22px, transparent 22px);
+        background-size: $size 22px, 100% 231px;*/
     }
 }
 
