--- a/assets/css/blocks/_any-stand-alone-block.scss
+++ b/assets/css/blocks/_any-stand-alone-block.scss
@@ -55,7 +55,7 @@ button {
         bottom: 5px;
         left: 0;
         width: 100%;
-       /* background-image: linear-gradient(to right, transparent 0px, transparent 5px,
+        background-image: linear-gradient(to right, transparent 0px, transparent 5px,
             $color 6px,
             transparent 7px, transparent calc(25% + 2px),
             $color calc(25% + 3px),
@@ -67,7 +67,7 @@ button {
             $color calc(100% - 6px),
             transparent calc(100% - 6px)),
             repeating-linear-gradient(to bottom, $color 0px, transparent 1px, transparent 21px, $color 22px, transparent 22px);
-        background-size: $size 22px, 100% 231px;*/
+        background-size: $size 22px, 100% 231px;
     }
 }
 
