--- a/assets/css/blocks/_any-stand-alone-block.scss
+++ b/assets/css/blocks/_any-stand-alone-block.scss
@@ -57,15 +57,23 @@ button {
         width: 100%;
         background-image: linear-gradient(to right, transparent 0px, transparent 5px,
             $color 6px,
-            transparent 7px, transparent calc(25% + 2px),
-            $color calc(25% + 3px),
-            transparent calc(25% + 3px), transparent calc(50% - 1px),
-            $color 50%,
-            transparent 50%, transparent calc(75% - 3px),
-            $color calc(75% - 2px),
-            transparent calc(75% - 2px), transparent calc(100% - 7px),
-            $color calc(100% - 6px),
-            transparent calc(100% - 6px)),
+            transparent 7px, transparent calc(20% + 2px),
+
+            $color calc(20% + 3px),
+            transparent calc(20% + 3px), transparent calc(40%),
+
+            $color calc(40% + 1px),
+            transparent calc(40% + 1px), transparent calc(60% - 1px),
+
+            $color calc(60%),
+            transparent calc(60%), transparent calc(80% - 4px),
+
+            $color calc(80% - 3px),
+            transparent calc(80% - 3px), transparent calc(100% - 6px),
+
+            $color calc(100% - 5px),
+            transparent calc(100% - 5px)),
+
             repeating-linear-gradient(to bottom, $color 0px, transparent 1px, transparent 21px, $color 22px, transparent 22px);
         background-size: $size 22px, 100% 231px;
     }
